# flower-demo

./: README.md
demo/: README.md  pyproject.toml
demo/src/: __init__.py  client_app.py  server_app.py  task.py
deploy/argocd/: demo-app.yaml
deploy/manifests/: clients.yaml  server.yaml
flower/deploy/manifests_v0.1/: superexec.yaml  superlink.yaml  supernode-1.yaml  supernode-2.yaml
flower/deploy/manifests_v0.1/clients/: clientapp-1.yaml
flower/deploy/manifests_v1.0/: superexec.yaml  superlink.yaml  supernode-1.yaml  supernode-2.yaml  supernodes.yaml
flower/quickstart/: pyproject.toml
flower/quickstart/src/: __init__.py  client_app.py  server_app.py  task.py
manifests/: server.yaml  superexec.yaml  supernodes.yaml
quickstart-k8s/: README.md  pyproject.toml
quickstart-k8s/manifests/: clientapp-1.yaml  clientapp-2.yaml  superexec.yaml  superlink.yaml  supernode-1.yaml  supernode-2.yaml
quickstart-k8s/manifests/app/: clientapp-1.yaml  clientapp-2.yaml
quickstart-k8s/manifests_v2/: superexec.yaml
quickstart-k8s/manifests_v2/clients/: clientapp-2.yaml
quickstart-k8s/quickstart/: client_app.py  server_app.py
