[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-k8s"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.10.0",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "liqo.io"

[tool.flwr.app.components]
serverapp = "quickstart.server_app:app"
clientapp = "quickstart.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 0.5
local-epochs = 1

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10

# Added for quickstart-k8s
[tool.flwr.federations.k8s]
# address = "127.0.0.1:9093" # if using port-forward
address = "172.18.0.2:32000" # if using static nodeport
insecure = true